@@ -64,6 +64,8 @@ Version 1.5.0+svn:
    * added expiration time to bans
    * added restart command to server that does gracefull restart
    * added option to do gracefull shut down for server
+ * campaignd
+   * made campaign server use gzip compression for networking
  * miscellaneous and bug fixes:
    * fixed issues with campaign info in non-compressed saved games
      (bug #11386)
